# Solitaire

./: README.md  pyproject.toml
src/game/: abstract.py  game.py  main.py  main_menu.py  objects.py  settings.py
src/game.egg-info/: PKG-INFO  SOURCES.txt
src/solitaire_game.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
